--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -11,7 +11,7 @@
   max-width: 1500px;
 }
 
-#d {
+.d {
   background-color: #141414;
   color: white;
   border-radius: 30px;
@@ -20,20 +20,17 @@
   min-width: auto;
   margin: 20px;
 }
-#d1 {
+.d1 {
   background-color: #212121;
   border-radius: 30px;
   margin: 30px;
   padding: 10px;
 }
-#d2 {
+.d2 {
   background-color: #212121;
   border-radius: 30px;
   margin: 30px;
   padding: 10px;
-}
-#t1 {
-  margin: auto;
 }
 #hs {
   width: 100%;
