--- a/stylesheets/wpr.css
+++ b/stylesheets/wpr.css
@@ -1,9 +1,22 @@
+#f1 {
+  bottom: 0;
+  width: 100%;
+  font-family: Calibri;
+  text-align: center;
+  font-size: 20px;
+  background-color: #141414;
+  height: 80px;
+  padding: 10px;
+  margin: -8px;
+  color: white;
+  position: fixed;
+}
+
 #a1 {
   color: white;
   float: left;
   font-family: Calibri;
   padding-left: 10px;
-
 }
 #h1 {
   background-color: #141414;
