--- a/stylesheets/crypty.css
+++ b/stylesheets/crypty.css
@@ -4,7 +4,8 @@
   justify-content: center;
   flex-wrap: wrap;
   align-content: center;
-  font-family: Calibri;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: auto;
   margin-top: 40px;
   margin-bottom: 40px;
