--- a/stylesheets/wpr.css
+++ b/stylesheets/wpr.css
@@ -1,5 +1,6 @@
 #f1 {
-  font-family: Calibri;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-align: center;
   font-size: 20px;
   background-color: #141414;
@@ -12,7 +13,8 @@
 #a1 {
   color: white;
   float: left;
-  font-family: Calibri;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding-left: 10px;
 }
 #h1 {
@@ -29,7 +31,8 @@
   color: #000000;
   border-radius: 78px;
   text-decoration: none;
-  font-family: Calibri;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding: 9px;
   margin: 2px;
   font-weight: bolder;
