--- a/stylesheets/crypty.css
+++ b/stylesheets/crypty.css
@@ -12,6 +12,20 @@
   max-width: 1500px;
 }
 
+a {
+  color: black;
+  font-size: large;
+  text-decoration: none;
+  font-weight: bolder;
+  background-color: white;
+  padding: 10px;
+  border-radius: 20px;
+}
+
+a:hover {
+  border-radius: 12px;
+}
+
 .d {
   background-color: #141414;
   color: white;
