--- a/stylesheets/wpr.css
+++ b/stylesheets/wpr.css
@@ -24,10 +24,9 @@
   margin: -8px;
 }
 
-#a2 {
+.a2 {
   margin: auto;
   background-color: white;
-
   color: #000000;
   border-radius: 78px;
   text-decoration: none;
@@ -38,11 +37,77 @@
   font-weight: bolder;
   font-size: 18px;
 }
-#a2:hover {
+.a2:hover {
   border-radius: 12px;
 }
 #nav1 {
   margin-top: 23px;
   margin-right: 13px;
   float: right;
+}
+
+.dropdown {
+  float: left;
+  text-align: center;
+  overflow: hidden;
+  border-radius: 20px;
+  background-color: white;
+  color: #000000;
+  margin-top: 12px;
+  margin-right: 13px;
+  float: right;
+}
+
+.dropdown .dropbtn {
+  cursor: pointer;
+  font-size: 16px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 14px 16px;
+  background-color: inherit;
+}
+
+.dropdown:hover .dropbtn,
+.dropbtn:focus {
+  background-color: #ddd;
+}
+
+.dropdown-content {
+  display: none;
+  border-radius: 30px;
+  position: absolute;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: white;
+  margin-top: 40px;
+}
+
+.dropdown-content a {
+  color: black;
+  text-decoration: none;
+  display: flex;
+  text-align: center;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.show {
+  display: block;
+}
+
+@media only screen and (max-width: 600px) {
+  #nav1 {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .dropdown {
+    display: none;
+  }
 }
