--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,30 +1,47 @@
-#f1 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  text-align: center;
-  font-size: 20px;
-  background-color: #141414;
-  height: 80px;
-  padding: 10px;
-  margin: -8px;
-  color: white;
-}
+/* Website */
 
-#a1 {
-  color: white;
-  float: left;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  padding-left: 10px;
-}
-#h1 {
+/* Website Bar */
+.wbar {
   background-color: #141414;
   height: 70px;
   padding: 10px;
   margin: -8px;
 }
 
-.a2 {
+/* Website Title */
+.wtitle {
+  color: white;
+  float: left;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding-left: 10px;
+}
+
+/* Website Subtitle */
+.wsubtitle {
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+/* Navigation */
+
+/* Navigation Bar*/
+.nbar {
+  margin-top: 23px;
+  margin-right: 13px;
+  float: right;
+}
+@media only screen and (max-width: 600px) {
+  .nbar {
+    display: none;
+  }
+}
+
+/* Navigation Item*/
+.nitem {
   margin: auto;
   background-color: white;
   color: #000000;
@@ -37,15 +54,11 @@
   font-weight: bolder;
   font-size: 18px;
 }
-.a2:hover {
+.nitem:hover {
   border-radius: 12px;
 }
-#nav1 {
-  margin-top: 23px;
-  margin-right: 13px;
-  float: right;
-}
 
+/* Dropdown */
 .dropdown {
   float: left;
   text-align: center;
@@ -57,7 +70,6 @@
   margin-right: 13px;
   float: right;
 }
-
 .dropdown .dropbtn {
   cursor: pointer;
   font-size: 16px;
@@ -69,12 +81,10 @@
   padding: 14px 16px;
   background-color: inherit;
 }
-
 .dropdown:hover .dropbtn,
 .dropbtn:focus {
   background-color: #ddd;
 }
-
 .dropdown-content {
   display: none;
   border-radius: 30px;
@@ -84,28 +94,18 @@
   background-color: white;
   margin-top: 40px;
 }
-
 .dropdown-content a {
   color: black;
   text-decoration: none;
   display: flex;
   text-align: center;
 }
-
 .dropdown-content a:hover {
   background-color: #ddd;
 }
-
 .show {
   display: block;
 }
-
-@media only screen and (max-width: 600px) {
-  #nav1 {
-    display: none;
-  }
-}
-
 @media only screen and (min-width: 600px) {
   .dropdown {
     display: none;
